<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="4dp"
    android:paddingBottom="8dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioDuckDialog"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/engine_duckduckgo"
            android:textSize="15sp"
            android:paddingStart="16dp"
            android:button="@null"
            android:drawableEnd="@null"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:buttonTint="@color/purple_300" />

        <RadioButton
            android:id="@+id/radioBraveDialog"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/engine_brave"
            android:textSize="15sp"
            android:paddingStart="16dp"
            android:button="@null"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:buttonTint="@color/purple_300" />

        <RadioButton
            android:id="@+id/radioGoogleDialog"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/engine_google"
            android:textSize="15sp"
            android:paddingStart="16dp"
            android:button="@null"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:buttonTint="@color/purple_300" />

    </RadioGroup>

</LinearLayout>
